Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 
 <p>This software aims to reconstruct brain relaxometry for T1 and T2 phantom images. All the image processing used in this project is based on structural brain templates. </p>
 
-<p>The currently available version of RelaxoPhantom toolkit is relaxophantom-v1.0.1, which provides:</p>
+<p>The currently available version of RelaxoPhantom toolkit is relaxophantom-v1.1.0, which provides:</p>
 
 <ul>
 <li>Relaxometry dataset for T2 and T1 images with different noise levels and RF distortions (please see the script phantom-build.sh for more details)</li>
-<li>Phantoms with 1 mm^3^ of spatial resolution is available</li>
+<li>Phantoms with 1 mm3 of spatial resolution is available</li>
 <li>Rician noise with 0%, 3% and 9% are available and Radio-frequency coil artifact with 0%, 20% and 40% are available for the phantom reconstructions</li>
 </ul>
 
-<p>To see a simple example of the image data that is created, please download a <a href="https://github.com/acsenrafilho/relaxophantom/raw/gh-pages/images/MNI152_T2_n3_rf20_slice_0081.nii">relaxometry sample</a>. For this particular example, the slice selected is at the middle brain portion in slice 81 (MNI152). All the 180 slices in the MNI152 is reconstructed in Relaxophantom, given a three-dimensional brain relaxometry simulation.   </p>
+<p>To see a simple example of the image data that is created, please download a <a href="https://github.com/acsenrafilho/relaxophantom/raw/gh-pages/images/MNI152_T2_n3_rf20_slice_0081.nii">relaxometry sample</a>. For this particular example, the slice selected is at the middle brain portion in slice 81 (MNI152). All the 180 slices in the MNI152 is reconstructed in RelaxoPhantom, given a three-dimensional brain relaxometry simulation.   </p>
 
 <h2>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements</h2>
