Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 
 <p>This software aims to reconstruct phantom T1 and T2 MRI brain relaxometry images. All the image processing used in this project is based on structural brain templates. </p>
 
-<p>The currently available version of RelaxoPhantom toolkit is relaxophantom-v1.1.0, which provides:</p>
+<p>The currently available version of RelaxoPhantom toolkit is relaxophantom-v1.1.1, which provides:</p>
 
 <ul>
 <li>T2 and T1 MRI simulation relaxometry images </li>
 <li>Phantoms with 1 mm3 of spatial resolution</li>
 <li>Rician noise with 0%, 3% and 9% and Radio-frequency coil artifact with 0%, 20% and 40%</li>
+<li>
+<em>Optional</em> output folder location, which the user can set where should the output simulation relaxometry data be placed</li>
 </ul>
 
 <p>To see a simple example of the image data that is created, please download a <a href="https://github.com/acsenrafilho/relaxophantom/raw/gh-pages/images/MNI152_T2_n3_rf20_slice_0081.nii">relaxometry sample</a>. In this particular example, the slice selected is at the middle brain portion in MNI152 brain template (slice 81). All the 180 slices in the MNI152 are reconstructed in RelaxoPhantom, which gives a three-dimensional brain relaxometry simulation.   </p>
